<resources>
    <string name="app_name">GitHubClient</string>
    <string name="user_icon">user icon</string>
    <string name="name">Name:</string>
    <string name="login">Login:</string>
    <string name="followers">Followers:</string>
    <string name="count_repositories">Count repositories:</string>
    <string name="avatar">avatar</string>
    <string name="owner">Owner</string>
    <string name="repository">Repository</string>
    <string name="check_more">Check more</string>
    <string name="forks">Forks:</string>
    <string name="watchers">Watchers:</string>
</resources>