<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/userContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_user_avatar"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:contentDescription="@string/avatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@android:drawable/alert_dark_frame" />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_user_avatar" />

        <TextView
            android:id="@+id/name"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@color/githubPrimaryToolbar"
            app:layout_constraintBottom_toBottomOf="@+id/txtName"
            app:layout_constraintStart_toEndOf="@+id/txtName"
            app:layout_constraintTop_toTopOf="@+id/txtName"
            tools:text="*full name*" />

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtName" />

        <TextView
            android:id="@+id/login"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@color/githubPrimaryToolbar"
            app:layout_constraintBottom_toBottomOf="@+id/txtLogin"
            app:layout_constraintStart_toEndOf="@+id/txtLogin"
            app:layout_constraintTop_toTopOf="@+id/txtLogin"
            tools:text="*login*" />

        <TextView
            android:id="@+id/txtFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/followers"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtLogin" />

        <TextView
            android:id="@+id/followers"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@color/githubPrimaryToolbar"
            app:layout_constraintBottom_toBottomOf="@+id/txtFollowers"
            app:layout_constraintStart_toEndOf="@+id/txtFollowers"
            app:layout_constraintTop_toTopOf="@+id/txtFollowers"
            tools:text="*73325*" />

        <TextView
            android:id="@+id/txtRepoCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/count_repositories"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtFollowers" />

        <TextView
            android:id="@+id/repoCount"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@color/githubPrimaryToolbar"
            app:layout_constraintBottom_toBottomOf="@+id/txtRepoCount"
            app:layout_constraintStart_toEndOf="@id/txtRepoCount"
            app:layout_constraintTop_toTopOf="@+id/txtRepoCount"
            tools:text="*56*" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/txtRepoCount">

            <include layout="@layout/shimmer_item_repos" />

            <include layout="@layout/shimmer_item_repos" />

            <include layout="@layout/shimmer_item_repos" />

            <include layout="@layout/shimmer_item_repos" />

            <include layout="@layout/shimmer_item_repos" />

            <include layout="@layout/shimmer_item_repos" />

            <include layout="@layout/shimmer_item_repos" />

            <include layout="@layout/shimmer_item_repos" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>